--- a/html/pop/popup.html
+++ b/html/pop/popup.html
@@ -10,7 +10,6 @@
 	<title>레이어 팝업</title>
 </head>
 <body>
-
 	<div class="modal-wrap" id="apply">
 		<div class="dimmed">
 			<div class="modal">
@@ -27,7 +26,7 @@
 					</div>
 					<div class="btn-wrap col-lg-2">
 						<button class="btn-type-sm purple"><em class="txt-rendering">확인</em></button>
-						<button class="btn-type-sm darkPurple"><em class="txt-rendering">마이 페이지</em></button>
+						<button class="btn-type-sm darkPurple" onclick="javascript:location.href='../member/partners_mypage.html'"><em class="txt-rendering">마이 페이지</em></button>
 					</div>
 				</div>
 			</div>
