--- a/html/index.html
+++ b/html/index.html
@@ -13,7 +13,6 @@
 	<script src="static/js/jquery-ui.min.js"></script>
 	<script src="static/js/jquery.fullpage.extensions.min.js"></script>
 	<script src="static/js/swiper.min.js"></script>
-	<script src="static/js/gsap.min.js"></script>
 	<script defer="defer" src="static/js/common.js"></script>
 
 	<link rel="stylesheet" type="text/css" href="static/css/base.css"> <!-- reset -->
@@ -55,7 +54,7 @@
 					<ul>
 						<!-- 로그인 전 -->
 						<li class="join" tabindex=0>
-							<a href="">회원가입</a>
+							<a href="javascript:void(0);">회원가입</a>
 							<div class="h-center">
 								<div class="animate fast fadeInUp_">
 									<span><a href="partner/signup.html"><em class="txt-rendering">프리랜서</em></a></span>
