--- a/html/introduce/we_project.html
+++ b/html/introduce/we_project.html
@@ -16,7 +16,6 @@
 
 	<link rel="stylesheet" type="text/css" href="../static/css/base.css"> <!-- reset -->
 	<link rel="stylesheet" type="text/css" href="../static/css/jquery-ui.min.css">
-	<link rel="stylesheet" type="text/css" href="../static/css/swiper.min.css">
 	<link rel="stylesheet" type="text/css" href="../static/css/style.css">
 	<link rel="stylesheet" media="all and (max-width:1680px)" type="text/css" href="../static/css/style_m.css">
 </head>
@@ -53,7 +52,7 @@
 					<ul>
 						<!-- 로그인 전 -->
 						<li class="join" tabindex=0>
-							<a href="">회원가입</a>
+							<a href="javascript:void(0);">회원가입</a>
 							<div class="h-center">
 								<div class="animate fast fadeInUp_">
 									<span><a href="../partner/signup.html"><em class="txt-rendering">프리랜서</em></a></span>
