--- a/html/member/applicant.html
+++ b/html/member/applicant.html
@@ -11,7 +11,6 @@
 
 	<script src="../static/js/jquery-3.6.0.min.js"></script>
 	<script src="../static/js/jquery-ui.min.js"></script>
-	<script src="../static/js/gsap.min.js"></script>
 	<script defer="defer" src="../static/js/common.js"></script>
 
 	<link rel="stylesheet" type="text/css" href="../static/css/base.css"><!-- reset -->
@@ -52,7 +51,7 @@
 					<ul>
 						<!-- 로그인 전 -->
 						<li class="join" tabindex=0>
-							<a href="">회원가입</a>
+							<a href="javascript:void(0);">회원가입</a>
 							<div class="h-center">
 								<div class="animate fast fadeInUp_">
 									<span><a href="../partner/signup.html"><em class="txt-rendering">프리랜서</em></a></span>
