--- a/html/member/applicant.html
+++ b/html/member/applicant.html
@@ -190,7 +190,7 @@
 												<div class="anchor-toolTip help">
 													<span>?</span>
 													<!-- 위플즈 인증 부가설명 -->
-													<div class="toolTip small focusable">
+													<div class="toolTip small focusable certification">
 														<div>
 															<div class="title"><strong>위플즈 인증</strong><span>이란?</span></div>
 															<div class="description">
@@ -251,7 +251,7 @@
 												<div class="anchor-toolTip help" data-toolTip="certification02">
 													<span>?</span>
 													<!-- 위플즈 인증 부가설명 -->
-													<div class="toolTip small focusable">
+													<div class="toolTip small focusable certification">
 														<div>
 															<div class="title"><strong>위플즈 인증</strong><span>이란?</span></div>
 															<div class="description">
