불필요 이미지 삭제

--- a/html/partner/modify.html
+++ b/html/partner/modify.html
@@ -495,6 +495,7 @@
 					<!--경력등록-->
 					<div class="contents-head">
 						<strong>경력등록</strong><em class="txt-color-purple txt-rendering">(필수등록)</em>
+						<span class="total-career">경력 <strong>10년 8개월</strong></span>
 					</div>
 					<div class="contents-body">
 						<div class="form-list pd-none">
