프리랜서 회원가입 분리

--- a/html/member/partners_mypage.html
+++ b/html/member/partners_mypage.html
@@ -129,11 +129,12 @@
 		</div>
 		<div class="fixed-wrap inner">
 			<div class="form-inline">
-				<ul class="col-4">
+				<ul class="col-5">
 					<li class="activities"><a href="../member/activities.html"><em class="txt-rendering">프로젝트<br class="mob-only" /> 활동내역</em></a></li>
 					<li class="wish"><a href="../member/wish_list.html"><em class="txt-rendering">관심<br class="mob-only" /> 프로젝트</em></a></li>
-					<li class="modified"><a href="../partner/modify.html"><em class="txt-rendering">개인정보<br class="mob-only" />수정</em></a></li>
 					<li class="inquiry"><a href="../community/inquiry.html"><em class="txt-rendering">1:1<br class="mob-only" /> 문의</em></a></li>
+					<li class="modified"><a href="../partner/modify.html"><em class="txt-rendering">개인정보<br class="mob-only" />수정</em></a></li>
+					<li class="modified"><a href="../partner/modify2.html"><em class="txt-rendering">부가정보<br class="mob-only" />수정</em></a></li>
 				</ul>	
 			</div>	
 		</div>	
