--- a/guide/file_list.html
+++ b/guide/file_list.html
@@ -85,7 +85,7 @@
 								<!-- client -->
 								<tr>
 									<td class="count"></td>
-									<td rowspan="3">Client (2p)</td>
+									<td rowspan="3">Client (3p)</td>
 									<td colspan="2">기업 회원가입</td>
 									<td><a href="../html/client/signup.html" target="_blank">/client/signup.html</a></td>
 								</tr>
@@ -103,19 +103,29 @@
 								<!-- partner -->
 								<tr>
 									<td class="count"></td>
-									<td rowspan="4">partner (3p)</td>
+									<td rowspan="6">partner (6p)</td>
 									<td colspan="2">프리랜서 회원가입</td>
 									<td><a href="../html/partner/signup.html" target="_blank">/partner/signup.html</a></td>
 								</tr>
 								<tr>
 									<td class="count"></td>
-									<td colspan="2">프리랜서 정보등록</td>
+									<td colspan="2">프리랜서 개인정보등록</td>
 									<td><a href="../html/partner/create.html" target="_blank">/partner/create.html</a></td>
 								</tr>
 								<tr>
 									<td class="count"></td>
-									<td colspan="2">프리랜서 정보수정</td>
+									<td colspan="2">프리랜서 개인정보수정</td>
 									<td><a href="../html/partner/modify.html" target="_blank">/partner/modify.html</a></td>
+								</tr>
+								<tr>
+									<td class="count"></td>
+									<td colspan="2">프리랜서 부가정보등록</td>
+									<td><a href="../html/partner/create2.html" target="_blank">/partner/create2.html</a></td>
+								</tr>
+								<tr>
+									<td class="count"></td>
+									<td colspan="2">프리랜서 부가정보수정</td>
+									<td><a href="../html/partner/modify2.html" target="_blank">/partner/modify2.html</a></td>
 								</tr>
 								<tr>
 									<td class="count"></td>
