퍼블리싱 수정 1차

--- a/html/client/finish.html
+++ b/html/client/finish.html
@@ -8,7 +8,7 @@
 	<meta name="Keywords" content="">
 	<meta name="Description" content="">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-	<title>프리랜서 개인정보수정 | 위플즈</title>
+	<title>기업회원 등록 완료 | 위플즈</title>
 
 	<script src="../static/js/jquery-3.6.0.min.js"></script>
 	<script src="../static/js/jquery-ui.min.js"></script>
@@ -123,148 +123,41 @@
 	</header><!-- // header -->
 
 	<div id="wrap">
-		<h1 class="hidden-txt">프리랜서 개인정보수정</h1>
+		<h1 class="hidden-txt">기업회원 등록 완료</h1>
 		<div class="sub-top-wrap">
 			<h2 class="heading-wrap-02 long-txt">
-				위플즈 회원이 되시면<br class="mob-only" /> 다양한 활동지원 서비스를 받으실 수 있습니다<br />
-				<span>프리랜서 여러분에게 금융지원, 복지지원, 교육지원, 법률상담, 세무대행 서비스를 제공합니다</span>
+				위플즈 기업회원이 되시면<br class="mob-only" /> 다양한 기업지원 서비스를 받으실 수 있습니다<br/>
+				<span>위플스는 성공적인 프로젝트를 위해 교육훈련지원, 제안서작성 및 프로젝트 전 단계 업무를 지원합니다</span>
 			</h2>
 		</div>
 		<div class="fixed-wrap inner">
 			<div class="form-inline">
 				<ul class="col-1">
-					<li class="benefit"><a href="../introduce/we_people.html"><em class="txt-rendering">We:People<br
-									class="mob-only" /> 프리랜서 혜택</em></a></li>
+					<li class="service"><a href="../introduce/we_project.html"><em class="txt-rendering">We:Project<br class="mob-only" /> 기업 서비스</em></a></li>
 				</ul>
 			</div>
 		</div>
-		<div class="contents-wrap list-type-02 inner">
+		<div class="contents-wrap inner">
 			<div class="contents" id="contents">
-				<form action="" method="post">
-					<!--기본정보-->
-					<div class="contents-head">
-						<strong>기본정보</strong><em class="txt-color-purple txt-rendering">(필수등록)</em>
+				<div class="contents-body">
+					<div class="sub-mid-wrap align-c">
+						<img src="../static/img/bg-peopleEnrollment-finish.gif" alt="기업회원 등록 완료">
+						<p>
+							<strong class="txt-rendering">기업회원 등록이 완료되었습니다!</strong><br />
+							<span class="txt-rendering"><b>기업회원 등록완료 후 프로젝트 지원</b>을 하실 수 있습니다<br /> 단, 등록된 회원정보의 사실 여부
+								확인을 위해 담당 매니저가 연락을 드릴 수도 있습니다.</span>
+						</p>
 					</div>
-					<div class="contents-body">
-						<div class="form-list">
-							<dl class="table pd-none disabled">
-								<dt><strong>아이디</strong></dt>
-								<dd>
-									<strong class="txt-rendering">pcntest</strong>
-								</dd>
-							</dl>
-
-							<dl class="table">
-								<dt><strong>비밀번호</strong></dt>
-								<dd>
-									<span class="text-wrap half2">
-										<input type="text" class="txt-rendering" id="" value=""
-											placeholder="9~12자 특수문자, 숫자포함 등록" title="비밀번호 - 9~12자 특수문자, 숫자포함 등록">
-									</span>
-									<span class="empty"></span>
-									<span class="text-wrap half2">
-										<input type="text" class="txt-rendering" id="" value="" placeholder="비밀번호 재입력"
-											title="비밀번호 - 비밀번호 재입력">
-									</span>
-								</dd>
-							</dl>
-
-							<dl class="table">
-								<dt><strong>이메일</strong></dt>
-								<dd class="email">
-									<span class="text-wrap half">
-										<input type="text" class="txt-rendering" id="" value="" placeholder="이메일 아이디"
-											title="이메일 - 이메일 아이디">
-									</span>
-									<span class="txt-rendering">@</span>
-									<span class="select-wrap half">
-										<label for="email"><em class="hidden-txt">이메일 주소 폼</em></label>
-										<select id="email" class="txt-rendering">
-											<option value="">naver.com</option>
-											<option value="">gmail.com</option>
-											<option value="">hanmail.net</option>
-										</select>
-									</span>
-								</dd>
-							</dl>
-
-							<dl class="table">
-								<dt><strong>주소</strong></dt>
-								<dd>
-									<div>
-										<span class="text-wrap has-button">
-											<input type="text" id="" class="txt-rendering" value=""
-												placeholder="우편번호를 검색하세요" title="우편번호 - 예)우편번호를 검색하세요">
-										</span>
-										<span class="btn-wrap-inline">
-											<button type="button" class="btn-type-sm darkPurple"><em
-													class="txt-rendering">우편번호 검색</em></button>
-										</span>
-									</div>
-									<div class="text-wrap">
-										<input type="text" id="" class="txt-rendering" value=""
-											placeholder="상세주소를 입력하세요" title="상세주소 - 예)상세주소를 입력하세요">
-									</div>
-								</dd>
-							</dl>
-
-							<dl class="table pd-none disabled">
-								<dt><strong>이름</strong></dt>
-								<dd>
-									<strong class="txt-rendering">홍길동</strong>
-								</dd>
-							</dl>
-
-							<dl class="table">
-								<dt><strong>전화번호</strong></dt>
-								<dd>
-									<div class="text-wrap purple">
-										<input type="text" class="txt-rendering" id="" value=""
-											placeholder="010-1234-5678" title="이름 - 예)010-1234-5678">
-									</div>
-									<p class="description txt-rendering">
-										본인확인 시 전화번호가 수정됩니다.
-									</p>
-								</dd>
-							</dl>
-
-							<dl class="table">
-								<dt><strong>성별</strong></dt>
-								<dd>
-									<div class="form-wrap col-2">
-										<span>
-											<input id="male" name="contract" type="radio" checked>
-											<label for="male"><em class="txt-rendering">남</em></label>
-										</span>
-										<span>
-											<input id="female" name="contract" type="radio">
-											<label for="female"><em class="txt-rendering">여</em></label>
-										</span>
-									</div>
-								</dd>
-							</dl>
-
-							<dl class="table pd-none disabled">
-								<dt><strong>생년월일</strong></dt>
-								<dd>
-									<strong class="txt-rendering">1978.11.06</strong>
-								</dd>
-							</dl>
-
-							<dl class="table pd-none disabled">
-								<dt><strong>국적</strong></dt>
-								<dd>
-									<strong class="txt-rendering">대한민국</strong>
-								</dd>
-							</dl>
-						</div>
-					</div><!-- // contents-body (기본정보)-->
 					<div class="btn-wrap align-c col-mid-2-2">
-						<button type="submit" class="btn-type-lg purple"><em
-								class="txt-rendering ft-md">수정하기</em></button>
-						<button type="button" class="btn-type-mid"><em class="txt-rendering ft-md">취소</em></button>
+						<button type="submit" class="btn-type-lg purple"
+							onclick="javascript:location.href='../index.html'"><em class="txt-rendering ft-md">위플즈
+								메인</em></button>
+						<button type="button" class="btn-type-mid"
+							onclick="javascript:location.href='../member/client_mypage.html'"><em
+								class="txt-rendering ft-md">마이페이지</em></button>
 					</div>
-				</form>
+				</div><!-- // contents-body -->
+
 			</div><!-- // contents -->
 		</div><!-- // contents-wrap -->
 	</div><!-- // #wrap -->
