--- a/html/introduce/we_project.html
+++ b/html/introduce/we_project.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="ko" class="introduce motion">
+
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -19,6 +20,7 @@
 	<link rel="stylesheet" type="text/css" href="../static/css/style.css">
 	<link rel="stylesheet" media="all and (max-width:1680px)" type="text/css" href="../static/css/style_m.css">
 </head>
+
 <body>
 	<!--[if lt IE 10]>
 	<div id="legacy-IE">
@@ -55,7 +57,8 @@
 							<a href="javascript:void(0);">회원가입</a>
 							<div class="h-center">
 								<div class="animate fast fadeInUp_">
-									<span><a href="../partner/signup.html"><em class="txt-rendering">프리랜서</em></a></span>
+									<span><a href="../partner/signup.html"><em
+												class="txt-rendering">프리랜서</em></a></span>
 									<span><a href="../client/signup.html"><em class="txt-rendering">기업회원</em></a></span>
 								</div>
 							</div>
@@ -67,17 +70,19 @@
 						-->
 					</ul>
 				</div>
-			</hgroup>	
+			</hgroup>
 			<nav class="menu-all">
 				<a href="javascript:void(0);"><span><em class="hidden-txt">전체메뉴</em></span></a>
 				<ul class="quick">
-					<li class="prj-add"><a href="../project/create.html"><em class="hidden-txt">프로젝트 등록 퀵 메뉴</em></a></li>
-					<li class="prj-search"><a href="../project/search.html"><em class="hidden-txt">프로젝트 검색 퀵 메뉴</em></a></li>
+					<li class="prj-add"><a href="../project/create.html"><em class="hidden-txt">프로젝트 등록 퀵 메뉴</em></a>
+					</li>
+					<li class="prj-search"><a href="../project/search.html"><em class="hidden-txt">프로젝트 검색 퀵 메뉴</em></a>
+					</li>
 				</ul>
 				<div>
 					<div>
 						<ul class="member animate fast fadeInDown">
-						<!-- 로그인 전 -->
+							<!-- 로그인 전 -->
 							<li><a href="../member/signin.html">로그인</a></li>
 							<li class="join">
 								<ul>
@@ -112,17 +117,17 @@
 								</li>
 							</ul>
 						</div>
-					</div>	
+					</div>
 				</div>
-			</nav>	
+			</nav>
 		</div>
 	</header><!-- // header -->
-	
+
 	<div id="wrap" class="project">
 		<h1 class="hidden-txt">기업서비스소개</h1>
 		<section class="section-wrap-01">
 			<div class="inner">
-				<h2><span>We&nbsp;:&nbsp;</span><strong>Project</strong></h2>	
+				<h2><span>We&nbsp;:&nbsp;</span><strong>Project</strong></h2>
 				<dl>
 					<dt><strong>안정되고 성공적인 프로젝트를 위해<br class="mob-only" /> 맞춤형 교육훈련을 실시합니다</strong></dt>
 					<dd>
@@ -134,9 +139,12 @@
 					</dd>
 				</dl>
 				<div class="btn-wrap align-r">
-					<button type="button" class="btn-type line transparent type01 scroll"><em class="txt-rendering">Detail</em></button>
-					<button type="button" class="btn-type line transparent type02" onclick="javascript:location.href='we_people.html'"><em class="txt-rendering">프리랜서혜택보기</em></button>
-				</div> 
+					<button type="button" class="btn-type line transparent type01 scroll"><em
+							class="txt-rendering">Detail</em></button>
+					<button type="button" class="btn-type line transparent type02"
+						onclick="javascript:location.href='we_people.html'"><em
+							class="txt-rendering">프리랜서혜택보기</em></button>
+				</div>
 				<div class="story">
 					<span class="animate fadeInUp_row"><em class="hidden-txt">아이콘 영역</em></span>
 					<p class="animate fadeInUp_row">
@@ -144,7 +152,7 @@
 						교육훈련 진행 후 인력을 투입하며 기업의 시스템과 업무에 대한 이해를 위해
 						위플즈 각 분야별 매니저가 사전 미팅 후 시스템과 업무 및 요구사항 분석을 진행합니다
 					</p>
-				</div>  
+				</div>
 			</div>
 		</section><!-- // section-wrap-01 -->
 
@@ -154,19 +162,26 @@
 					<div class="animate fadeInUp_row">
 						<h3>맞춤형 교육훈련 실시<br class="mob-only" /> <span>(5인 이상 투입인력 요청 시 진행)</span></h3>
 						<ul class="education">
-							<li><span><strong>업무분석</strong><br /><em class="txt-rendering">시스템 및 업무 요구사항분석<br /> (위플즈 각 분야별 매니저가 진행)</em></span></li>
-							<li><span><strong>인재선발</strong><br /><em class="txt-rendering">프로젝트에 적합한 인재 선발<br /> (2배 수로 1차 선발 후 인터뷰를 통해 최종 선정)</em></span></li>
-							<li><span><strong>교육훈련</strong><br /><em class="txt-rendering">교육 진행은 위플즈 매니저 또는<br /> 수요 기업의 교육훈련 담당자가 실시</em></span></li>
+							<li><span><strong>업무분석</strong><br /><em class="txt-rendering">시스템 및 업무 요구사항분석<br /> (위플즈 각
+										분야별 매니저가 진행)</em></span></li>
+							<li><span><strong>인재선발</strong><br /><em class="txt-rendering">프로젝트에 적합한 인재 선발<br /> (2배 수로
+										1차 선발 후 인터뷰를 통해 최종 선정)</em></span></li>
+							<li><span><strong>교육훈련</strong><br /><em class="txt-rendering">교육 진행은 위플즈 매니저 또는<br /> 수요
+										기업의 교육훈련 담당자가 실시</em></span></li>
 						</ul>
 						<p class="description align-r txt-rendering">(교육훈련은 프로젝트 진행 단계에서도 업무 능력 향상을 위해 계속 지원)</p>
 					</div>
 					<div class="animate fadeInUp_row">
 						<h3>프로젝트 의뢰 감사 서비스 제공</h3>
 						<ul class="service">
-							<li><span><em class="txt-rendering">프로젝트 의뢰 기업 담당자에게<br /> 위플즈에서 제공하는 소정의 기념품을 제공합니다.</em></span></li>
-							<li><span><em class="txt-rendering">프로젝트 연속 의뢰 시 프리미엄 기업 서비스의<br /> 혜택을 제공 받으실 수 있습니다.</em></span></li>
+							<li><span><em class="txt-rendering">프로젝트 의뢰 기업 담당자에게<br /> 위플즈에서 제공하는 소정의 기념품을
+										제공합니다.</em></span></li>
+							<li><span><em class="txt-rendering">프로젝트 연속 의뢰 시 프리미엄 기업 서비스의<br /> 혜택을 제공 받으실 수
+										있습니다.</em></span></li>
 						</ul>
-						<div class="btn-wrap align-c"><button class="btn-type-lg purple" onclick="javascript:location.href='../project/create.html'"><em class="ft-md txt-rendering">프로젝트 등록하기</em></button></div>
+						<div class="btn-wrap align-c"><button class="btn-type-lg purple"
+								onclick="javascript:location.href='../project/create.html'"><em
+									class="ft-md txt-rendering">프로젝트 등록하기</em></button></div>
 					</div>
 				</div>
 			</div>
@@ -178,7 +193,8 @@
 					<h3>프로젝트 전 단계 업무 지원</h3>
 					<ul class="business-support">
 						<li class="clear">
-							<div class="img-cts animate animate-delay-01 fadeInLeft"><img src="../static/img/illustration-05.png" alt="사업계획서 작성 지원"></div>
+							<div class="img-cts animate animate-delay-01 fadeInLeft"><img
+									src="../static/img/illustration-05.png" alt="사업계획서 작성 지원"></div>
 							<div class="txt-cts animate animate-delay-01 fadeInRight">
 								<div>
 									<h4>사업계획서 작성 지원</h4>
@@ -195,7 +211,8 @@
 							</div>
 						</li>
 						<li class="clear">
-							<div class="img-cts animate animate-delay-01 fadeInRight"><img src="../static/img/illustration-06.png" alt="제안서 작성 지원"></div>
+							<div class="img-cts animate animate-delay-01 fadeInRight"><img
+									src="../static/img/illustration-06.png" alt="제안서 작성 지원"></div>
 							<div class="txt-cts animate animate-delay-01 fadeInLeft">
 								<div>
 									<h4>제안서 작성 지원</h4>
@@ -204,14 +221,16 @@
 											프로젝트 참여를 위한 제안서 작성 요청 시 <b>각 분야별 전문가가 제안서 작성 지원</b>을 합니다.
 										</li>
 										<li class="txt-rendering">
-											위플즈는 기술부문에 대한 <b>제안서 작성이 가능한 인력을 보유</b>하고 있으며 시스템, 기획, 개발, 디자인시안 작업까지 지원 가능합니다.
+											위플즈는 기술부문에 대한 <b>제안서 작성이 가능한 인력을 보유</b>하고 있으며 시스템, 기획, 개발, 디자인시안 작업까지 지원
+											가능합니다.
 										</li>
-									</ul>	
+									</ul>
 								</div>
 							</div>
 						</li>
 						<li class="clear">
-							<div class="img-cts animate animate-delay-01 fadeInLeft"><img src="../static/img/illustration-07.png" alt="프로젝트 수행 지원"></div>
+							<div class="img-cts animate animate-delay-01 fadeInLeft"><img
+									src="../static/img/illustration-07.png" alt="프로젝트 수행 지원"></div>
 							<div class="txt-cts animate animate-delay-01 fadeInRight">
 								<div>
 									<h4>프로젝트 수행 지원</h4>
@@ -229,7 +248,9 @@
 							</div>
 						</li>
 					</ul>
-					<div class="btn-wrap align-c"><button class="btn-type-lg purple" onclick="javascript:location.href='../project/create.html'"><em class="ft-md txt-rendering">프로젝트 의뢰하기</em></button></div>
+					<div class="btn-wrap align-c"><button class="btn-type-lg purple"
+							onclick="javascript:location.href='../project/create.html'"><em
+								class="ft-md txt-rendering">프로젝트 등록하기</em></button></div>
 				</div>
 			</div>
 		</section><!-- // section-wrap-03 -->
@@ -263,20 +284,21 @@
 	<div class="bg-area col-4">백그라운드 영역 03</div>
 	<div class="bg-area col-4">백그라운드 영역 04</div>
 	<script>
-		$(function(){
+		$(function () {
 			commonFunction().motion();
 
-			document.querySelector('.scroll').addEventListener('click', function(e){
+			document.querySelector('.scroll').addEventListener('click', function (e) {
 				e.preventDefault();
 				e.stopPropagation();
 
 				var setTop = $('.story').offset().top - $('header').height();
 
 				$('body, html').animate({
-					scrollTop : setTop + 'px'
+					scrollTop: setTop + 'px'
 				});
 			});
 		});
 	</script>
 </body>
+
 </html>
