개인정보수정 페이지 추가 수정

--- a/html/partner/modify.html
+++ b/html/partner/modify.html
@@ -218,9 +218,15 @@
 							<dl class="table">
 								<dt><strong>전화번호</strong></dt>
 								<dd>
-									<div class="text-wrap purple">
-										<input type="text" class="txt-rendering" id="" value=""
-											placeholder="010-1234-5678" title="이름 - 예)010-1234-5678">
+									<div>
+										<span class="text-wrap has-button purple">
+											<input type="text" class="txt-rendering" id="" value=""
+												placeholder="010-1234-5678" title="이름 - 예)010-1234-5678">
+										</span>
+										<span class="btn-wrap-inline">
+											<button type="button" class="btn-type-sm darkPurple"><em
+													class="txt-rendering">본인확인</em></button>
+										</span>
 									</div>
 									<p class="description txt-rendering">
 										본인확인 시 전화번호가 수정됩니다.
