--- a/guide/file_list.html
+++ b/guide/file_list.html
@@ -85,7 +85,7 @@
 								<!-- client -->
 								<tr>
 									<td class="count"></td>
-									<td rowspan="3">Client (3p)</td>
+									<td rowspan="4">Client (3p)</td>
 									<td colspan="2">기업 회원가입</td>
 									<td><a href="../html/client/signup.html" target="_blank">/client/signup.html</a></td>
 								</tr>
@@ -98,6 +98,11 @@
 									<td class="count"></td>
 									<td colspan="2">기업정보수정</td>
 									<td><a href="../html/client/modify.html" target="_blank">/client/modify.html</a></td>
+								</tr>
+								<tr>
+									<td class="count"></td>
+									<td colspan="2">기업회원 등록완료</td>
+									<td><a href="../html/client/finish.html" target="_blank">/client/finish.html</a></td>
 								</tr>
 
 								<!-- partner -->
